--- a/Products.html
+++ b/Products.html
@@ -147,6 +147,7 @@
 
         </form>
         <a href="./Login.html"><i class="fa-solid fs-5  fa-user d-none d-xl-block ps-2"></i></a>
+        <a href="./Login.html " class=" d-xl-none ">Login</a>
 
         <a href="#" class="text-decoration-none"><i
             class="fa-solid fs-5  fa-heart mx-2 position-relative d-none d-xl-block">
