--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 
         </form>
         <a href="./Login.html"><i class="fa-solid fa-user fs-5 d-none d-xl-block ps-2"></i></a>
+        <a href="./Login.html " class=" d-xl-none ">Login</a>
 
         <a href="#" class="text-decoration-none fs-5"><i
             class="fa-solid  fa-heart mx-2 position-relative d-none d-xl-block">
@@ -213,7 +214,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./assets/images/home-banner-img1.png" class="d-block w-100" alt="...">
+            <img src="./assets/images/home-banner-img1.png"  class=" d-block w-100" alt="...">
             <div class=" carousel-caption position-absolute top-50 start-50 translate-middle d-none d-md-block  ">
               <h1 class="fw-bold"">Exploring Premier <span class=" text-success fw-bold" ">Gaming Accessories</span> </h1>
         <p >Discover top-tier gaming accessories designed to enhance your gameplay. Explore the best in precision, comfort, and performance for an unparalleled gaming experience.</p>
@@ -260,7 +261,7 @@
                       class="card  col-lg-3 col-md-5 bg-main-color-item text-light align-items-center position-relative image-hover-wrapper  border border-black">
 
                       <!-- Product Image -->
-                      <a href="./Products.html"><img src="./assets/images/products/1-1.png" class=" card-img-top b-1"
+                      <a href="./Products.html"><img src="./assets/images/products/1-1.png" class="fff card-img-top b-1"
                           alt="..." /></a>
 
                       <!-- Hover Icons -->
